--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Poke App</string>
+    <string name="search">search</string>
+    <string name="tab_my_pokemon">meus pokemons</string>
+    <string name="tab_all_pokemon">todos</string>
 </resources>
